codes/aws/2. service/k8s-manifests/was/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-spring
  namespace: was
  labels:
    app: was-spring
    tier: was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: was-spring
      tier: was
  template:
    metadata:
      labels:
        app: was-spring
        tier: was
    spec:
      serviceAccountName: petclinic-was
      containers:
      - name: spring-boot
        image: cloud039/petclinic-was:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi

        startupProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 12

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

        volumeMounts:
        - name: db-secrets
          mountPath: /mnt/petclinic-secrets
          readOnly: true

      volumes:
      - name: db-secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: petclinic-db

      terminationGracePeriodSeconds: 30
