codes/aws/2. service/k8s-manifests/was/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-to-was
  namespace: was
spec:
  podSelector:
    matchLabels:
      app: was-spring
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: web
      ports:
        - protocol: TCP
          port: 8080
